# ganttoid

./: Pipfile  pyproject.toml
.devcontainer/: devcontainer.json
src/ganttoid/: __init__.py  plan_project.py  scheduling.py  task.py
src/test/: test_scheduling.py
