[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ganttoid"
version = "0.0.1"
authors = [
  { name="ZudlJK", email="zudjl@email.de" }
]
description = "Apply critical path to a set of ClickUp tasks"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'requests', 'pyclickup', 'pytest'
]

[project.urls]
"Homepage" = "https://github.com/zudljk/remoteplay"
"Bug Tracker" = "https://github.com/zudljk/remoteplay/issues"

[project.scripts]
remoteplay = "remoteplay:main"